feat: Add comprehensive documentation and complete request/response flow
- Add complete request/response flow: Parse Request → Validate Request → Execute Handler → Validate Response → Return JSON
- Create comprehensive documentation in docs/ directory:
  - structs-and-tags.md: Complete guide to creating request/response structs
  - complete-flow.md: Detailed explanation of the complete flow
  - validation-rules.md: Validation rules and custom validators
  - README.md: Documentation index and navigation
- Update handlers.go to use ValidateAndJSON for response validation
- Update example/main.go with response validation examples
- Add extensive test coverage (71.9% coverage)
- Update main README.md with complete flow information
- Add coverage.sh script for coverage analysis
- All tests passing

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,12 @@ Thumbs.db
 *.out
 go.work
 
+# Coverage files
+coverage.out
+coverage.html
+*.cover
+*.coverprofile
+
 # Build artifacts
 example-app
 dist/
